tests/ui/dep-graph/dep-graph-trait-impl.stderr
error: OK
  --> $DIR/dep-graph-trait-impl.rs:28:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:33:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:38:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:43:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: no path from `x::<impl Foo for char>` to `typeck`
  --> $DIR/dep-graph-trait-impl.rs:56:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: aborting due to 5 previous errors

